# Cgen

./: Cargo.toml  README.md
.github/build-assets/: properties.json  updates.json
.github/workflows/: build.yml
src/: code_parser.rs  config.rs  doc_generator.rs  executor.rs  main.rs  pdf_parser.rs
